# Worms-TallerI

./: .gitignore  CMakeLists.txt  Grupo 11.md  README.md  git comandos.txt  inicio_de_partida.txt  protocolo_client  protocolo_server.txt
client/: CMakeLists.txt  CMakeLists2.txt  README.md  config.h  congfig.txt
client/UI/: CMakeLists.txt
client/UI/pro/: untitled2.pro
client/UI/src/: connectwindow.cpp  connectwindow.h  mainwindow.cpp  mainwindow.h  mapwindow.cpp  mapwindow.h  namewindow.cpp  namewindow.h
client/UI/ui/: connectwindow.ui  mapwindow.ui  namewindow.ui
client/src/: GameBuilder.cpp  GameBuilder.h  GameClient.cpp  GameClient.h  PreGameManager.cpp  PreGameManager.h  ProxyClient.cpp  ProxyClient.h  Room.cpp  Room.h  clientMain.cpp  connectwindow.cpp  connectwindow.h  main.cpp  mainClient.cpp  mainwindow.cpp  mainwindow.h  mapwindow.cpp  mapwindow.h  namewindow.cpp  namewindow.h  protocol.h  resultwindow.cpp  resultwindow.h
client/src/common/: Queue.cpp  Queue.h  Thread.cpp  Thread.h  Util.cpp  Util.h  socket.cpp  socket.h
client/src/controller/: BackgroundEvent.cpp  CameraMove.cpp  CameraMove.h  ClientCommandSender.cpp  ClientCommandSender.h  ClientEventReceiver.cpp  ClientEventReceiver.h  Controller.cpp  Controller.h  CreateMissileEvent.h  CreateStageEvent.cpp  CreateVigaEvent.cpp  CreateVigaEvent.h  CreateWormEvent.cpp  Event.cpp  Event.h  EventFactory.cpp  EventFactory.h  EventHandler.cpp  EventHandler.h  EventType.h  GameWinnerEvent.cpp  GameWinnerEvent.h  MissileExploteEvent.h  MissileMoveEvent.cpp  MissileMoveEvent.h  MouseState.cpp  MouseState.h  PlayerConnectEvent.cpp  PlayerConnectEvent.h  PlayerIdEvent.cpp  PlayerIdEvent.h  PlayerLoseEvent.cpp  PlayerLoseEvent.h  StartTurnEvent.cpp  WeaponDoneEvent.cpp  WeaponDoneEvent.h  WormChangeAimEvent.cpp  WormChangeLifeEvent.cpp  WormChangeStateEvent.cpp  (+5 more)
client/src/controller/event/: BackgroundEvent.h  CameraMoveEvent.cpp  CameraMoveEvent.h  CreateMissileEvent.cpp  CreateMissileEvent.h  CreateStageEvent.h  CreateVigaEvent.cpp  CreateVigaEvent.h  CreateWormEvent.cpp  CreateWormEvent.h  Event.cpp  Event.h  GameWinnerEvent.cpp  GameWinnerEvent.h  MissileExploteEvent.cpp  MissileExploteEvent.h  MissileMoveEvent.h  PlayerOffEvent.cpp  PlayerOffEvent.h  RightTargertEvent.cpp  RightTargertEvent.h  SecondEvent.cpp  SecondEvent.h  StartTurnEvent.cpp  StartTurnEvent.h  WeaponDoneEvent.cpp  WeaponDoneEvent.h  WindChangedEvent.cpp  WindChangedEvent.h  (+10 more)
client/src/exception/: GameException.cpp  GameException.h  SdlException.cpp  SdlException.h  socket_error.cpp
client/src/manager/: Boot.cpp  Boot.h  FontManager.cpp  SoundManager.cpp  SoundManager.h  SpriteConfigurator.h  TextManager.cpp  TextManager.h  TextureManager.cpp  TextureManager.h  path.h  sound.h
client/src/model/: ChangeAimCommand.cpp  ChangeCountDownCommand.cpp  ChargePowerCommand.h  ClientCommand.cpp  ClientCommand.h  GameControllerProxy.cpp  GameControllerProxy.h  Model.cpp  Model.h  TeledirigidoCommand.cpp  TeledirigidoCommand.h  WormJumpCommand.cpp  WormMoveCommand.cpp  WormMoveCommand.h  WormShootCommand.cpp  WormShootCommand.h  WormWeaponCommand.cpp  clientModel.h
client/src/sound/: SoundManager.cpp  SoundManager.h
client/src/view/: AimView.cpp  AimView.h  Animation.cpp  Animation.h  Boot.cpp  Boot.h  BulletFactory.cpp  BulletFactory.h  BulletView.cpp  BulletView.h  Camera.cpp  Camera.h  Escenario.cpp  Escenario.h  FontManager.cpp  FontManager.h  GameException.h  MenuWeaponView.cpp  MenuWeaponView.h  PanelInfo.cpp  PanelInfo.h  PowerView.cpp  PowerView.h  SdlException.cpp  SdlScreen.cpp  SdlScreen.h  Shape.cpp  Shape.h  Sprite.cpp  Sprite.h  SpriteConfigurator.cpp  SpriteConfigurator.h  TextManager.cpp  TextManager.h  TextView.cpp  TextView.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  (+16 more)
client/test/: socket.txt
client/ui/: connectwindow.ui  mainwindow.ui  mapwindow.ui  namewindow.ui  resultwindow.ui
editor/: CMakeLists.txt  README.md  config.h  install.txt
editor/src/: arma.cpp  arma.h  configarmas.cpp  configarmas.h  configgusanos.cpp  configgusanos.h  conversor.cpp  conversor.h  default_armo.yaml  dibujable.cpp  dibujable.h  gusano.cpp  gusano.h  mainwindow.cpp  mainwindow.h  manejadorsonido.cpp  manejadorsonido.h  recursos.qrc  registro.cpp  registro.h  validadordemapa.cpp  validadordemapa.h  viga.cpp  viga.h  vigachica.cpp  vigachica.h  vigagrande.cpp  vigagrande.h  yamlparser.cpp  yamlparser.h
editor/supp/: minimal.supp
editor/ui/: configarmas.ui  configgusanos.ui  mainwindow.ui
server/: CMakeLists.txt  config.h.in  main.cpp  main_back.cpp  main_viejo.cpp
server/maps/: mapa1  mapa1.yaml  mapa2.yaml  uno_encima_2.yaml  uno_encima_del_otro.yaml
server/src/: air_attack_missile.cpp  air_attack_missile.h  banana.cpp  banana.h  bat.cpp  bat.h  bazooka.cpp  bazooka.h  blocking_queue.cpp  blocking_queue.h  contact_listener.cpp  contact_listener.h  delimiter.cpp  delimiter.h  dynamite.cpp  dynamite.h  exploted_state.cpp  exploted_state.h  file.cpp  file.h  file_error.cpp  file_error.h  fragment_info.h  fragment_projectile.cpp  fragment_projectile.h  game.cpp  game.h  game_constants.h  game_finished.h  green_granade.cpp  green_granade.h  gusano.cpp  gusano.h  gusano_state.h  hall.cpp  hall.h  inactive_state.cpp  inactive_state.h  initiador.cpp  initiador.h  (+52 more)
server/src/fake_proxy/: mok_proxy.cpp  mok_proxy.h
server/src/game/: delimiter.cpp  delimiter.h  game.cpp  game.h  game_constants.h  game_finished.h  objects_factory.cpp  objects_factory.h  turn.cpp  turn.h  viga.cpp  viga.h
server/src/server/: hall.cpp  hall.h  multiple_proxy.cpp  multiple_proxy.h  proxy.cpp  proxy.h  receiver.cpp  receiver.h  room.cpp  room.h  server.cpp  server.h  socket.cpp  socket.h  socket_error.cpp
server/src/util/: blocking_queue.cpp  blocking_queue.h  protected_queue.cpp  protected_queue.h  queue.h  thread.cpp  thread.h  yamlparser.cpp  yamlparser.h
server/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  comandos  runner  runner.cpp  worm_moving_tests.h
server/util/: yamlparser.cpp  yamlparser.h
(+116 files in other folders)
